fix: improve the font sizes on smaller viewports

--- a/src/components/BottomImage/ImageBanner.module.scss
+++ b/src/components/BottomImage/ImageBanner.module.scss
@@ -14,7 +14,7 @@
   margin: 2rem auto;
   text-align: center;
   font-family: "AlegreyaSans", sans-serif;
-  font-size: clamp(1.5rem, 4vw, 5rem);
+  font-size: clamp(1.1rem, 4vw, 5rem);
   color: var(--white);
   backdrop-filter: blur(10px);
 }
