--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -97,7 +97,7 @@
 }
 
 .disclaimerText {
-  font-size: 1rem;
+  font-size: clamp(0.6rem, 3vw, 1rem);
   padding-bottom: 1rem;
   border-bottom: 1px solid var(--grey);
 
@@ -107,7 +107,7 @@
 }
 
 .rights {
-  font-size: 0.9rem;
+  font-size: clamp(0.5rem, 3vw, 0.9rem);
   margin-top: 3rem;
   margin-bottom: 1rem;
   align-self: center;
